@@ -29,14 +29,4 @@
    an old file. */
 #define WARN_MTIME   5
 
-/* List of auto-detected language extensions by the submit client.
-   Format: 'LANG,MAINEXT[,EXT]... [LANG...]' where:
-   - LANG is the language name displayed,
-   - MAINEXT is the extension corresponding to the langid in DOMjudge,
-   - EXT... are comma separated additional detected language extensions.
-   This list only needs to be modified when additional languages are
-   added and should be kept in sync with the list in domserver-config.php.
-*/
-#define LANG_EXTS    "C,c C++,cpp,cc,c++ Java,java Pascal,pas,p Haskell,hs,lhs Perl,pl POSIX-shell,sh C#,csharp,cs AWK,awk Python2,py2,py Python3,py3 Bash,bash Ada,adb,ads Fortran,f95,f90 Scala,scala Lua,lua"
-
 #endif /* _SUBMIT_CONFIG_ */
