@@ -236,22 +236,28 @@ function importZippedProblem($zip, $probid = NULL)
 	}
 
 	// submit reference solutions
-	if ( isset($ini_array['allow_submit']) && $ini_array['allow_submit'] ) {
+	if ( $DB->q('VALUE SELECT allow_submit FROM problem WHERE probid = %s', $probid) ) {
 		// First find all submittable languages:
-		$langs = $DB->q('KEYVALUETABLE SELECT langid AS extension, langid AS langid FROM language
-		                 WHERE allow_submit = 1');
+		$langs = $DB->q('KEYVALUETABLE SELECT langid, extensions
+ 		                 FROM language WHERE allow_submit = 1');
 
 		for ($j = 0; $j < $zip->numFiles; $j++) {
 			$filename = $zip->getNameIndex($j);
 			$extension = end(explode(".", $filename));
-			$langid = getLangID($extension);
-			if( !empty($langid) && isset($langs[$langid]) ) {
+			unset($langid);
+			foreach ( $langs as $key => $exts ) {
+				if ( in_array($extension,json_decode($exts)) ) {
+					$langid = $key;
+					break;
+				}
+			}
+			if( !empty($langid) ) {
 				if ( !($tmpfname = mkstemps(TMPDIR."/ref_solution-XXXXXX",0)) ) {
 					error("Could not create temporary file.");
 				}
 				file_put_contents($tmpfname, $zip->getFromIndex($j));
 				if( filesize($tmpfname) <= dbconfig_get('sourcesize_limit')*1024 ) {
-					submit_solution('domjudge', $probid, $langs[$langid], array($tmpfname), array($filename));
+					submit_solution('domjudge', $probid, $langid, array($tmpfname), array($filename));
 				}
 				unlink($tmpfname);
 			}
